View Issue Details

IDProjectCategoryView StatusLast Update
0023882Open CASCADEOCCT:Modeling Algorithmspublic2013-04-29 15:24
ReporterabvAssigned Toemv 
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2008 
Product Version6.6.0 
Target Version6.6.0Fixed in Version6.6.0 
Summary0023882: Memory leak is reported on BOP in test bugs fclasses bug7287_5
DescriptionTest bugs fclasses bug7287_5 fails on Windows (tested on master from 2013-04-06, commit hash c97067ad9538792807b4713f81bef6f6506960aa) reporting memory leak. The command being tested is bopfuse.
TagsNo tags attached.
Test case numberbugs fclasses bug7287_1 bug7287_2 bug7287_3 bug7287_4 bug7287_5 bug7287_6

Relationships

related to 0023901 closedomy Memory leaks in tests 

Activities

emv

2013-04-10 15:10

developer   ~0024077

Git branch CR23882 is ready to be reviewed.
http://git.dev.opencascade.org/gitweb/?p=occt.git;a=commit;h=1d3a41071d375e55aa10b94a35852d15856de2b7

abv

2013-04-10 15:24

manager   ~0024078

No remarks, please test

apn

2013-04-12 13:15

administrator   ~0024109

Dear BugMaster,

Branch CR23882 (and products from GIT master) was compiled on Linux and Windows platforms and tested without rebase.
SHA-1: 1d3a41071d375e55aa10b94a35852d15856de2b7

Number of compiler warnings:

occt component:
Linux: 2 (2 on master)
Windows: 11 (11 on master)

products component:
Linux: 0 (0 on master)
Windows: 50 (50 on master)

Regressions:
No regressions

Improvements:
No improvements

Test case:
bugs fclasses bug7287_1 bug7287_2 bug7287_3 bug7287_4 bug7287_5 bug7287_6 - OK

Testing on Linux:
Total MEMORY difference: 244292104 / 244810388
Total CPU difference: 11907.849999999775 / 19944.319999999734

Testing on Windows:
Total MEMORY difference: 354097948 / 355647152
Total CPU difference: 17513.546875 / 20782.34375

There are not serious differences in images found by testdiff.

Related Changesets

occt: master 5d05cf31

2013-04-10 11:05:50

emv

Details Diff
0023882: Memory leak is reported on BOP in test bugs fclasses bug7287_5.
Test cases which check Boolean Operation algorithm on memory leaks have been rewritten to test the whole algorithm and not a part of it.
Affected Issues
0023882
mod - src/BOPTest/BOPTest_BOPCommands.cxx Diff File
mod - tests/bugs/fclasses/bug7287_1 Diff File
mod - tests/bugs/fclasses/bug7287_2 Diff File
mod - tests/bugs/fclasses/bug7287_3 Diff File
mod - tests/bugs/fclasses/bug7287_4 Diff File
mod - tests/bugs/fclasses/bug7287_5 Diff File
mod - tests/bugs/fclasses/bug7287_6 Diff File

Issue History

Date Modified Username Field Change
2013-04-06 15:01 abv New Issue
2013-04-06 15:01 abv Assigned To => jgv
2013-04-08 12:55 abv Assigned To jgv => emv
2013-04-08 12:55 abv Status new => assigned
2013-04-10 15:10 emv Note Added: 0024077
2013-04-10 15:10 emv Assigned To emv => abv
2013-04-10 15:10 emv Status assigned => resolved
2013-04-10 15:24 abv Note Added: 0024078
2013-04-10 15:24 abv Assigned To abv => bugmaster
2013-04-10 15:24 abv Status resolved => reviewed
2013-04-11 13:57 apn Test case number => bugs fclasses bug7287_5
2013-04-11 13:57 apn Assigned To bugmaster => apn
2013-04-12 13:15 apn Note Added: 0024109
2013-04-12 13:15 apn Test case number bugs fclasses bug7287_5 => bugs fclasses bug7287_1 bug7287_2 bug7287_3 bug7287_4 bug7287_5 bug7287_6
2013-04-12 13:15 apn Assigned To apn => bugmaster
2013-04-12 13:15 apn Status reviewed => tested
2013-04-15 07:25 abv Relationship added related to 0023901
2013-04-15 17:59 emv Changeset attached => occt master 5d05cf31
2013-04-15 17:59 emv Assigned To bugmaster => emv
2013-04-15 17:59 emv Status tested => verified
2013-04-15 17:59 emv Resolution open => fixed
2013-04-23 13:35 aiv Status verified => closed
2013-04-29 15:24 aiv Fixed in Version => 6.6.0