0023882: Memory leak is reported on BOP in test bugs fclasses bug7287_5. Test cases which check Boolean Operation algorithm on memory leaks have been rewritten to test the whole algorithm and not a part of it.